# bizbot

./: .env.example  .gitignore  DEPLOY.md  README.md  ecosystem.config.js  main.py  pm2-cleanup.sh  pyproject.toml  pyrightconfig.json  start-bizbot.sh
.github/workflows/: deploy.yml  lint.yml
api/: routes.py
bots/: client.py  constants.py  db.py  dynamodb.py
bots/cogs/: test.py  tickets.py
bots/ticketHelpers/: ticketCategorySelect.py  ticketCategoryView.py  ticketClaimHelpers.py  ticketCreateModal.py
examples/: db_usage.py
lib/: constants.py  db.py
services/discord/: client.py
services/discord/admin/: admin.py  adminEventHelpers.py
services/discord/constants/: old_role_select.py  temp_discord_roles.py
services/discord/health/: health.py
services/discord/identity/: verify.py
services/discord/tickets/: adjustRolesView.py  discordEventsStore.py  discordRolesStore.py  ticketCategorySelect.py  ticketCategoryView.py  ticketClaimHelpers.py  ticketCloseConfirmView.py  ticketCreateModal.py  tickets.py
services/hello/: client.py
