[project]
name = "bizbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.68",
    "discord-py>=2.7.1",
    "fastapi>=0.135.1",
    "pyright>=1.1.408",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]
